<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/Title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/playerName"
        android:id="@+id/player"
        android:layout_below="@+id/title"
        android:layout_alignParentStart="true"
        android:layout_marginTop="48dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etPlayerName"
        android:layout_alignBottom="@+id/player"
        android:layout_toEndOf="@+id/player"
        android:textSize="20sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playButton"
        android:id="@+id/btnPlay"
        android:layout_marginTop="54dp"
        android:layout_below="@+id/player"
        android:layout_centerHorizontal="true"
        android:onClick="onPlayClicked" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvDisplay"
        android:layout_below="@+id/btnPlay"
        android:layout_alignParentStart="true"
        android:layout_marginTop="51dp" />
</RelativeLayout>
