<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.cissy.dicerollingapp.secondactivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/gamewelcome"
        android:id="@+id/tvWelcome"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvGamerandom"
        android:layout_below="@+id/tvWelcome"
        android:layout_marginTop="66dp"
        android:layout_alignEnd="@+id/tvWelcome"
        android:textColor="#fdfa0313" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnRoll"
        android:id="@+id/btnRoll"
        android:layout_below="@+id/tvWelcome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="155dp"
        android:onClick="onRollClicked" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvResult"
        android:layout_marginTop="51dp"
        android:layout_below="@+id/btnRoll"
        android:layout_alignStart="@+id/btnRoll" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quit"
        android:id="@+id/btnQuit"
        android:layout_below="@+id/tvResult"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:onClick="onQuitClicked" />

</RelativeLayout>
